Mahout Change Log

Release 1.0 - unreleased

  MAHOUT-1440: Add option to set the RNG seed for inital cluster generation in Kmeans/fKmeans (Andrew Palumbo via ssc)

  MAHOUT-1445: Create an intro for item based recommender (Nick Martin via ssc)

  MAHOUT-1509: Invalid URL in link from "quick start/basics" page (Nick Martin, smarthi)

  MAHOUT-1508: Performance problems with sparse matrices (ssc)

  MAHOUT-1504: Enable/fix thetaSummer job in TrainNaiveBayesJob (Andrew Palumbo, smarthi)

  MAHOUT-1503: TestNaiveBayesDriver fails in sequential mode (Andrew Palumbo, smarthi)

  MAHOUT-1501: ClusterOutputPostProcessorDriver has private default constructor (ssc)

  MAHOUT-1491: Spectral KMeans Clustering doesn't clean its /tmp dir and fails when seeing it again (smarthi)

  MAHOUT-1488: DisplaySpectralKMeans fails: examples/output/clusteredPoints/part-m-00000 does not exist (Saleem Ansari via smarthi)

  MAHOUT-1483: Organize links in web site navigation bar (akm)

  MAHOUT-1482: Rework quickstart website (Jian Wang via ssc)

  MAHOUT-1476: Cleanup website on Hidden Markov Models (akm)

  MAHOUT-1475: Cleanup website on Naive Bayes (smarthi)

  MAHOUT-1472: Cleanup website on fuzzy kmeans (smarthi)

  MAHOUT-1471: Cleanup website for Canopy clustering (smarthi)

  MAHOUT-1467: ClusterClassifier readPolicy leaks file handles (Avi Shinnar, smarthi)

  MAHOUT-1466: Cluster visualization fails to execute (ssc)
  
  MAHOUT-1465: Clean up README (akm)

  MAHOUT-1463: Modify OnlineSummarizers to use the TDigest dependency from Maven Central (tdunning, smarthi)

  MAHOUT-1460: Remove reference to Dirichlet in ClusterIterator (frankscholten)

  MAHOUT-1459: Move Hadoop related code out of CanopyClusterer (frankscholten)

  MAHOUT-1458: Remove KMeansConfigKeys and FuzzyKMeansConfigKeys (frankscholten)

  MAHOUT-1457: Move EigenSeedGenerator into spectral kmeans package (frankscholten)

  MAHOUT-1455: Forkcount config causes JVM crashes during build (frankscholten)
