@@ -29,6 +29,7 @@ import org.slf4j.LoggerFactory;
 
 import com.google.common.collect.Lists;
 
+@Deprecated
 public class CanopyClusterer {
 
   private static final Logger log = LoggerFactory.getLogger(CanopyClusterer.class);
