@@ -21,6 +21,7 @@ import org.apache.hadoop.conf.Configuration;
 import org.apache.mahout.common.ClassUtils;
 import org.apache.mahout.common.distance.DistanceMeasure;
 
+@Deprecated
 public final class CanopyConfigKeys {
 
   private CanopyConfigKeys() {}
